# OpenEmail-GTK

openemail/: message.py
openemail/gtk/: messages.py  thread_view.py
openemail/gtk/ui/: dialogs.blp  meson.build  message-row.blp  message-view.blp  messages.blp  ui.gresource.xml.in
po/: POTFILES.in
